@@ -147,8 +147,8 @@ my $SNMP = pf::SNMP->new();
 
 # -- variables to avoid repetition --
 # VLAN is irrelevant unless it's 'VoIP'
-my $non_voip_vlan = 10;
-my $voip_vlan = 'VoIP';
+my $non_voip = 0;
+my $voip = 1;
 
 my $fake_mac_prefix = '02:00:';
 my $fake_mac_voip = '01:';
@@ -157,27 +157,27 @@ my $fake_mac_non_voip = '00:';
 my $real_mac = "00:1f:5b:e8:b8:4f";
 
 # generateFakeMac
-is($SNMP->generateFakeMac($non_voip_vlan, 13),
+is($SNMP->generateFakeMac($non_voip, 13),
     $fake_mac_prefix.$fake_mac_non_voip."00:00:13",
     "Generate fake MAC non-VoIP normal case");
 
-is($SNMP->generateFakeMac($non_voip_vlan, 10001), 
+is($SNMP->generateFakeMac($non_voip, 10001), 
     $fake_mac_prefix.$fake_mac_non_voip."01:00:01", 
     "Generate fake MAC non-VoIP big ifIndex case");
 
-is($SNMP->generateFakeMac($non_voip_vlan, 1110001),
+is($SNMP->generateFakeMac($non_voip, 1110001),
     $fake_mac_prefix.$fake_mac_non_voip."99:99:99",
     "Generate fake MAC non-VoIP too large case");
 
-is($SNMP->generateFakeMac($voip_vlan, 13),
+is($SNMP->generateFakeMac($voip, 13),
     $fake_mac_prefix.$fake_mac_voip."00:00:13",
     "Generate fake MAC VoIP normal case");
 
-is($SNMP->generateFakeMac($voip_vlan, 10001),
+is($SNMP->generateFakeMac($voip, 10001),
     $fake_mac_prefix.$fake_mac_voip."01:00:01",
     "Generate fake MAC VoIP big ifIndex case");
 
-is($SNMP->generateFakeMac($voip_vlan, 1110001),
+is($SNMP->generateFakeMac($voip, 1110001),
     $fake_mac_prefix.$fake_mac_voip."99:99:99",
     "Generate fake MAC non-VoIP too large case");
 
